# wiki-qa-cli

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
cli/: __init__.py  app.py
config/: settings.py  settings.yaml
pipeline/: __init__.py
storage/: __init__.py
tests/: test_cli.py  test_config.py
